# Voice-Assistants-Diya

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  voice_bot.py
app/core/: llm.py  memory.py  search.py  transcription.py  tts.py
app/utils/: config.py  keys.py
